test/programs/error-missing-right-paren.expected
error[E001]: bad syntax
test/programs/error-missing-right-paren:1:9
   |
 1 | (def A B
   |         ^ unexpected end of input
   |           expecting '(' or ')'